<resources>
    <string name="app_name">Łamigłówki</string>

    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_main">...</string>

    <string name="question_edit_hint">Nazwa zagadki</string>
    <string name="question_body_edit_hint">Treść zagadki</string>
    <string name="question_answer_edit_hint">Odpowiedź</string>
    <string name="question_save_text">Zapisz zagadkę!</string>
    <string name="question_saving">Zapisywanie zagadki...</string>
    <string name="question_saved">Zapisano</string>
    <string name="question_set_location_text">Ustaw tu punkt docelowy</string>
    <string name="question_clear_location_text">Wyczyść punkt docelowy</string>
    <string name="question_obtaining_location">Określanie lokalizacji...</string>
    <string name="question_location_obtained">Pobrano lokalizację</string>
    <string name="question_no_location">Zagadka nie wymaga poruszania się</string>

    <string name="question_save_toast_bad_data">Musisz wypełnić wszystkie pola</string>

    <string name="question_far_away">Jesteś daleko od celu</string>
    <string name="question_rather_far">Jesteś dość daleko od celu</string>
    <string name="question_closer">Ciepło, ciepło...</string>
    <string name="question_reached">Dotarłeś do celu!</string>
    <string name="question_not_reached">Najpierw dojdź do celu, a potem udziel odpowiedzi</string>

    <string name="riddle_answer">OK</string>
    <string name="riddle_downloading">Pobieranie zagadki...</string>
    <string name="question_bad_answer">Zła odpowiedź :P</string>
    <string name="question_correct_answer">Dobra odpowiedź! Gratulacje!</string>
    <string name="button_play">Graj</string>
    <string name="button_create">Twórz</string>
    <string name="button_create_prize">Twórz nagrody</string>
    <string name="button_create_riddle">Twórz zagadki</string>
    <string name="button_magic_squares">Magiczne kwadraty</string>
    <string name="button_nonograms">Nonogramy</string>
    <string name="button_nurikabe">Nurikabe</string>
    <string name="button_filomino">Filomino</string>
    <string name="button_riddles">Zagadki</string>

    <string name="title_activity_start_game">Rozpocznij grę</string>
    <string name="title_activity_start">Start!</string>
    <string name="edit_message">Wpisz wiadomość</string>
    <string name="button_send">Wyślij!</string>
    <string name="title_activity_display_message">Moja wiadomość</string>
    <string name="title_activity_game_rules">Zasady Gry</string>
    <string name="rules">
Twoim celem jest zaznaczenie wysp na morzu. Do każdej wyspy ma należeć dokładnie jedno pole z liczbą i wyspa musi składać się z tylu pól ile wynosi ta liczba. Wyspy nie mogą się stykać bokami. Pozostała część planszy to morze. Morze musi być spójne oraz nie może zawierać w sobie kwadratu 2x2.
</string>
    <string name="title_activity_play_level">Poziom Gry</string>

    <string name="title_activity_second_level">Drugi poziom</string>
    <string name="title_activity_game_menu">Menu gry</string>
    <string name="title_activity_level">Poziom</string>
    <string name="nonograms_app_name">Nonogramy</string>
    <string name="title_activity_rules">Zasady gry</string>
    <string name="title_activity_set_params">Ustaw parametry</string>
    <string name="title_activity_menu_create">Twórz</string>
    <string name="title_activity_create_prize_menu">Twórz nagrodę</string>
    <string name="no_task">Brak zadania (dotknij aby utworzyć)</string>
    <string name="scenario_prize_hint">Wprowadź kod nagrody</string>
    <string name="button_create_scenario">Twórz scenariusz</string>
    <string name="scenario_save_text">Zapisz scenariusz</string>
    <string name="title_activity_load_game">Załaduj grę</string>

    <string name="button_load_picture">Załaduj obrazek</string>

    <string name="prize_title_edit">Tytuł nagrody:</string>
    <string name="prize_body_edit">Treść nagrody:</string>
    <string name="prize_saving">Zapisywanie nagrody...</string>
    <string name="prize_saved">Nagroda została zapisana</string>
    <string name="prize_edit_hint">Nazwa nagrody</string>
    <string name="prize_body_edit_hint">Treść nagrody</string>
    <string name="prize_save_text">Zapisz nagrodę</string>
    <string name="prize_accept">OK</string>

    <string name="title_activity_create_prize">Stwórz nagrodę</string>
    <string name="title_activity_show_prize">Nagroda</string>

    <string name="title_activity_timer">Stoper</string>
    <string name="title_activity_winning">Zwycięstwa</string>
    <string name="title_activity_best_gamers">Najlepsi gracze</string>

</resources>
