<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/button_create_prize"
        android:text="@string/button_create_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createPrize"/>

    <Button
        android:id="@+id/button_create_riddle"
        android:text="@string/button_create_riddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createRiddle"/>

    <Button
        android:id="@+id/button_create_scenario"
        android:text="@string/button_create_scenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createScenario"/>

</LinearLayout>
