<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RiddleMapPlayActivity">

    <TextView
        android:id="@+id/riddle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riddle_downloading"/>
    <TextView
        android:id="@+id/riddle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/question_answer_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_answer_edit_hint"
        android:inputType="text"/>
    <Button
        android:id="@+id/question_save"
        android:text="@string/riddle_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="answerRiddle"/>

</LinearLayout>
