<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RiddleMapCreateActivity">

    <EditText
        android:id="@+id/question_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_edit_hint"
        android:inputType="text"
        android:layout_weight="0"/>
    <EditText
        android:id="@+id/question_body_edit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/question_body_edit_hint"
        android:inputType="text|textMultiLine"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/question_answer_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_answer_edit_hint"
        android:inputType="text"
        android:layout_weight="0"/>
    <!--<LinearLayout-->   <!--TODO uncomment to enable location obtainer-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_weight="0">-->
        <!--<Button-->
            <!--android:id="@+id/question_set_location"-->
            <!--android:text="@string/question_set_location_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.5"-->
            <!--android:onClick="setLocation"/>-->
        <!--<Button-->
            <!--android:id="@+id/question_clear_location"-->
            <!--android:text="@string/question_clear_location_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.5"-->
            <!--android:onClick="clearLocation"/>-->
        <!--</LinearLayout>-->
    <!--<TextView-->
        <!--android:id="@+id/question_location_state"-->
        <!--android:text="@string/question_no_location"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0"/>-->
    <Button
        android:id="@+id/question_save"
        android:text="@string/question_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="saveRiddle"/>

</LinearLayout>
